Removes Reader from Google widget; adds CWS
Also
- Simplifies background stuff for a future change
- Sets width to 100%

--- a/widgets/google/widget.google.html
+++ b/widgets/google/widget.google.html
@@ -8,23 +8,12 @@
         padding: 0;
         user-select: none;
         -webkit-user-select: none;
-        width: 406px;
+        width: 100%;
 
         font-family: "Segoe UI", "Droid Sans", Arial, sans-serif;
 
-        background-image: linear-gradient(right bottom, rgb(121,209,121) 0%, rgb(5,135,5) 100%);
-        background-image: -o-linear-gradient(right bottom, rgb(121,209,121) 0%, rgb(5,135,5) 100%);
-        background-image: -moz-linear-gradient(right bottom, rgb(121,209,121) 0%, rgb(5,135,5) 100%);
-        background-image: -webkit-linear-gradient(right bottom, rgb(121,209,121) 0%, rgb(5,135,5) 100%);
-        background-image: -ms-linear-gradient(right bottom, rgb(121,209,121) 0%, rgb(5,135,5) 100%);
-
-        background-image: -webkit-gradient(
-          linear,
-          right bottom,
-          left top,
-          color-stop(0, rgb(121,209,121)),
-          color-stop(1, rgb(5,135,5))
-        );
+        background-image: -webkit-gradient(linear, 100% 100%, 0% 0%, to(rgba(255, 255, 255, 0.04)), from(rgba(255, 255, 255, 0.35)));
+        background-color: #1a951a;
       }
       .qtip.qtip-dark {
         width: auto !important;
@@ -62,7 +51,6 @@
         opacity: .77;
 
         background-image: url(widget.google.products.png);
-        background-color: transparent;
         background-repeat: no-repeat;
       }
       .SVC:hover {
@@ -95,7 +83,7 @@
       #MAPS {
         background-position: -210px 0;
       }
-      #READER {
+      #CWS {
         background-position: -636px 0;
       }
       #NEWS {
@@ -138,23 +126,23 @@
       <a class="SVC" id="IMG"       href="https://www.google.com/imghp"       title="Google Image Search"     target="_parent">&nbsp;</a>
       <a class="SVC" id="MAPS"      href="https://www.google.com/maps"        title="Google Maps"             target="_parent">&nbsp;</a>
       <a class="SVC" id="NEWS"      href="https://news.google.com"            title="Google News"             target="_parent">&nbsp;</a>
-      <a class="SVC" id="READER"    href="https://reader.google.com/"         title="Google Reader"           target="_parent">&nbsp;</a>
       <a class="SVC" id="FINANCE"   href="https://www.google.com/finance"     title="Google Finance"          target="_parent">&nbsp;</a>
       <a class="SVC" id="PROD"      href="https://www.google.com/products"    title="Google Product Search"   target="_parent">&nbsp;</a>
       <a class="SVC" id="BMKS"      href="https://www.google.com/bookmarks"   title="Google Bookmarks"        target="_parent">&nbsp;</a>
       <a class="SVC" id="TRANSLATE" href="https://www.google.com/translate"   title="Google Translate"        target="_parent">&nbsp;</a>
+      <a class="SVC" id="OFFERS"    href="https://www.google.com/offers/"     title="Google Offers"           target="_parent">&nbsp;</a>
     </div>
 
     <div id="services" class="s-bottom">
       <a class="SVC" id="GMAIL"     href="https://mail.google.com/"           title="Gmail"                   target="_parent">&nbsp;</a>
       <a class="SVC" id="DRIVE"     href="https://drive.google.com/"          title="Google Drive"            target="_parent">&nbsp;</a>
       <a class="SVC" id="VOICE"     href="https://www.google.com/voice/"      title="Google Voice"            target="_parent">&nbsp;</a>
+      <a class="SVC" id="CWS"       href="https://chrome.google.com/webstore?utm_source=ntp-extension&utm_medium=awesome-new-tab-page" title="Chrome Web Store" target="_parent">&nbsp;</a>
       <a class="SVC" id="PLAY"      href="https://play.google.com/"           title="Google Play"             target="_parent">&nbsp;</a>
       <a class="SVC" id="MUSIC"     href="https://music.google.com/"          title="Google Play Music"       target="_parent">&nbsp;</a>
       <a class="SVC" id="YT"        href="https://www.youtube.com/"           title="YouTube"                 target="_parent">&nbsp;</a>
       <a class="SVC" id="PICASA"    href="https://picasaweb.google.com/"      title="Picasa"                  target="_parent">&nbsp;</a>
       <a class="SVC" id="CAL"       href="https://www.google.com/calendar/"   title="Google Calendar"         target="_parent">&nbsp;</a>
-      <a class="SVC" id="OFFERS"    href="https://www.google.com/offers/"     title="Google Offers"           target="_parent">&nbsp;</a>
       <a class="SVC" id="WALLET"    href="https://wallet.google.com/manage/"  title="Google Wallet"           target="_parent">&nbsp;</a>
     </div>
   </body>
