Suppresses annoying Twitter warning in tutorial

--- a/extension/widgets/tutorial/widget.tutorial.html
+++ b/extension/widgets/tutorial/widget.tutorial.html
@@ -1,5 +1,6 @@
 <DOCTYPE html>
 <html ng-app="antp" ng-csp>
+  <meta name="twitter:widgets:csp" content="on">
   <head>
     <style type="text/css">
       body {
