--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -694,8 +694,10 @@
     <!-- Helps keep Chrome's Developer Tools / Elements tab pretty -->
     <div id="script_holder">
       <script type="text/javascript" src="/javascript/jquery.js"></script>
+      <script type="text/javascript" src="https://d3nslu0hdya83q.cloudfront.net/dist/1.0/raven.min.js" </script>
+      <script type="text/javascript" src="/javascript/libs.uglified.js"></script>
+      <script type="text/javascript" src="/javascript/app.compiled.js"></script>
 
-      <script type="text/javascript" src="/javascript/common.js?nocache=12"></script>
       <script type="text/javascript" src="/javascript/tilesystem.js?nocache=12"></script>
       <script type="text/javascript" src="/javascript/hscroll.js"></script>
 
