--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/css/style.css?nocache=12" type="text/css" media="screen" />
 
     <meta name="google" value="notranslate" />
+    <meta name="twitter:widgets:csp" content="on">
   </head>
 
   <body class="bg-color">
