RCTM visual improvements
- Also brings sprites to it; I forgot it before

--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -147,7 +147,7 @@
         <img class="rctm-icon" ng-src="chrome://favicon/{{rct.url}}">
         <a class="rctm-link" id="{{rct}}" title="{{rct.title}}"
           href="{{rct.url}}">{{rct.title}}</a>
-        <div ng-click="removeTab(rct)" title="{{ 'rctm_remove' | i18n }}" class="rctm-close"></div>
+        <div ng-click="removeTab(rct)" title="{{ 'rctm_remove' | i18n }}" class="rctm-close sprite"></div>
       </div>
 
       <div ng-show="recently_closed" class="rctm-reset-all" ng-click="clear()">{{ "rctm_clear_all" | i18n }}</div>
