--- a/extension/widgets/google/widget.google.html
+++ b/extension/widgets/google/widget.google.html
@@ -137,7 +137,7 @@
       <a class="SVC" id="GMAIL"     href="https://mail.google.com/"           title="Gmail"                   target="_parent">&nbsp;</a>
       <a class="SVC" id="DRIVE"     href="https://drive.google.com/"          title="Google Drive"            target="_parent">&nbsp;</a>
       <a class="SVC" id="VOICE"     href="https://www.google.com/voice/"      title="Google Voice"            target="_parent">&nbsp;</a>
-      <a class="SVC" id="CWS"       href="https://chrome.google.com/webstore?utm_source=ntp-extension&utm_medium=awesome-new-tab-page" title="Chrome Web Store" target="_parent">&nbsp;</a>
+      <a class="SVC" id="CWS"       href="https://chrome.google.com/webstore?utm_source=webstore-app&utm_medium=awesome-new-tab-page" title="Chrome Web Store" target="_parent">&nbsp;</a>
       <a class="SVC" id="PLAY"      href="https://play.google.com/"           title="Google Play"             target="_parent">&nbsp;</a>
       <a class="SVC" id="MUSIC"     href="https://music.google.com/"          title="Google Play Music"       target="_parent">&nbsp;</a>
       <a class="SVC" id="YT"        href="https://www.youtube.com/"           title="YouTube"                 target="_parent">&nbsp;</a>
