--- a/extension/widgets/tutorial/widget.tutorial.html
+++ b/extension/widgets/tutorial/widget.tutorial.html
@@ -128,6 +128,7 @@
         color: white;
         text-decoration: none;
         text-align: center;
+        cursor: pointer;
       }
     </style>
     <script type="text/javascript" src="/javascript/jquery.js"></script>
