Adds deprecation notice to notepad widget

--- a/extension/widgets/notepad/widget.notepad.html
+++ b/extension/widgets/notepad/widget.notepad.html
@@ -63,7 +63,7 @@
 
   <body>
     <div class="textwrapper">
-      <textarea id="notepad" cols="2" rows="10"></textarea>
+      <textarea id="notepad" cols="2" rows="10" disabled></textarea>
     </div>
   </body>
 </html>
