Hides Pro button

--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -123,7 +123,7 @@
       <div id="recently-closed-tabs" class="sprite" title="{{ 'ui_button_rct' | i18n}}"></div>
       <div id="lock-button" class="sprite" title="{{ 'ui_button_lock' | i18n}}" style="display: none;"></div>
       <div id="unlock-button" class="sprite" title="{{ 'ui_button_unlock' | i18n}}"></div>
-      <div id="pro-button" class="sprite" title="Awesome New Tab Page Pro"></div>
+      <div id="pro-button" class="sprite" title="Awesome New Tab Page Pro" style="display: none;"></div>
     </div>
 
     <div id="recently-closed-tabs-menu" class="no-scroll" ng-controller="RCTMCtrl">
