Brings import/export up to speed

--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -277,6 +277,7 @@
               <p><i18n message-id="ui_import_export_desc_export"></i18n></p>
               <p><i18n message-id="ui_import_export_installed_warning"></i18n></p>
               <p><i18n message-id="ui_import_export_desc_restore"></i18n></p>
+              <p>Important: Backups made before October 14, 2013 will only restore tile placements, not overall ANTP settings.</p>
 
               <div>
                 <textarea rows="10" cols="50" id="import-textarea"></textarea>
