Adds backup warning to Online Backups tab

--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -294,6 +294,7 @@
             <div class="online-backups" ng-controller="backupsCtrl">
               <p><i18n message-id="ui_online_backups_desc"></i18n></p>
               <p><i18n message-id="ui_online_backups_warning"></i18n></p>
+              <p>Important: Backups made before October 14, 2013 will only restore tile placements, not overall ANTP settings.</p>
 
               <div class="list-wrapper" ng-controller="backupsCtrl">
                 <div class="space-stats"></div>
