Adds bug report link to About

--- a/extension/ntp.html
+++ b/extension/ntp.html
@@ -175,6 +175,13 @@
           <a href="https://github.com/NewTabPage/Boilerplate-Widget" class="bubble ilb">
             Make a widget
           </a>
+
+          <h3>Find a bug?</h3>
+          <p>If you find a bug, please visit the Help & Feedback site and submit a ticket.
+          Simply click the link below and click "Contact Support":</p>
+          <a href="https://ntp.uservoice.com/" class="bubble ilb">
+            Report it
+          </a>
         </div>
 
         <div id="about-share" class="ui-2">
